--- a/style/main.css
+++ b/style/main.css
@@ -419,171 +419,159 @@ body .header {
   height: 100vh;
   background: url(/images/Maskgroup.png) no-repeat center center fixed;
   background-size: cover;
+  /* Navbar container */
 }
 
-body .header nav {
-  padding-top: 25px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 97%;
-  margin: auto;
-  border-bottom: 1px solid #ffffff;
-}
-
-body .header nav img {
-  margin-left: 15px;
-  margin-bottom: 20px;
-}
-
-body .header nav ul {
+body .header .nav-items {
+  overflow: hidden;
   margin-left: auto;
-  padding-right: 10px;
-  padding-left: 0;
-  list-style-type: none;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  margin-top: 40px;
+  margin-right: 20px;
+  /* Links inside the navbar */
+  /* The dropdown container */
+  /* Show the dropdown menu on hover */
+  /* Dropdown content (hidden by default) */
 }
 
-body .header nav ul li {
-  cursor: pointer;
-  color: #ffffff;
-  font-size: 1.05em;
-  font-weight: 600;
-  padding-left: 30px;
-}
-
-body .header nav ul .drop:hover .dropdown-content {
-  visibility: visible;
-  opacity: 1;
-  display: block;
-}
-
-body .header nav .dropdown-content {
-  visibility: hidden;
-  position: absolute;
-  background: #016937;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  margin-top: 42px;
-  z-index: 1;
-}
-
-body .header nav .dropdown-content li {
-  padding: 10px 100px 10px 20px;
-}
-
-body .header nav .dropdown-content li a {
+body .header .nav-items a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
   text-decoration: none;
-  color: #ffffff;
 }
 
-body .header .menu-btn {
-  visibility: hidden;
-  position: absolute;
-  top: 30px;
-  right: 10px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 40px;
-  height: 30px;
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
+body .header .nav-items .dropdown {
+  float: left;
+  overflow: hidden;
+  /* Dropdown button */
 }
 
-body .header .menu-btn_burger {
-  width: 35px;
-  height: 4px;
-  background: white;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 2px 5px rgba(64, 186, 123, 0);
-          box-shadow: 0 2px 5px rgba(64, 186, 123, 0);
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-body .header .menu-btn_burger::before, body .header .menu-btn_burger::after {
-  content: "";
-  position: absolute;
-  width: 35px;
-  height: 4px;
-  background: white;
-  border-radius: 5px;
-  -webkit-box-shadow: 0 2px 5px rgba(64, 186, 123, 0);
-          box-shadow: 0 2px 5px rgba(64, 186, 123, 0);
-  -webkit-transition: all 0.5s ease-in-out;
-  transition: all 0.5s ease-in-out;
-}
-
-body .header .menu-btn_burger::before {
-  -webkit-transform: translateY(-16px);
-          transform: translateY(-16px);
-}
-
-body .header .menu-btn_burger::after {
-  -webkit-transform: translateY(16px);
-          transform: translateY(16px);
-}
-
-body .header .menu-btn.open .menu-btn_burger {
-  -webkit-transform: translateX(-50px);
-          transform: translateX(-50px);
+body .header .nav-items .dropdown button {
   background: transparent;
   -webkit-box-shadow: none;
           box-shadow: none;
+  border: none;
 }
 
-body .header .menu-btn.open .menu-btn_burger::before {
-  -webkit-transform: rotate(45deg) translate(35px, -35px);
-          transform: rotate(45deg) translate(35px, -35px);
+body .header .nav-items .dropdown button:hover {
+  border-bottom: 3px solid #40ba7b;
+  padding-bottom: 15px;
 }
 
-body .header .menu-btn.open .menu-btn_burger::after {
-  -webkit-transform: rotate(-45deg) translate(35px, 35px);
-          transform: rotate(-45deg) translate(35px, 35px);
+body .header .nav-items .dropdown:hover .dropdown-content {
+  display: block;
+}
+
+body .header .nav-items .dropdown-content {
+  display: none;
+  position: absolute;
+  margin-top: 2px;
+  background-color: green;
+  min-width: 160px;
+  -webkit-box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+body .header .nav-items .dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+body .header .nav-items .dropdown-content a:hover {
+  background-color: #40ba7b;
+}
+
+body .header .nav-items .dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+body .header nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border-bottom: 1px solid white;
+}
+
+body .header nav .logo {
+  margin: 15px 0px 5px 10px;
+}
+
+body .header nav .logo.show {
+  display: none;
+}
+
+body .header nav .icon {
+  display: none;
+}
+
+body .header .nav-items.responsive {
+  display: none;
+  -webkit-transition: all 5s ease-in-out;
+  transition: all 5s ease-in-out;
 }
 
 @media screen and (max-width: 1172px) {
-  body .header nav ul {
-    border-bottom: none;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    height: 100vh;
-    -webkit-transform: translateX(100vw);
-            transform: translateX(100vw);
-    background-color: #016937;
+  body .header nav {
+    border: none;
   }
-  body .header nav ul img {
+  body .header nav .icon {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+  }
+  body .header .nav-items {
     display: none;
   }
-  body .header .menu-items.open {
-    -webkit-transform: translateX(0);
-            transform: translateX(0);
+  body .header .nav-items.responsive {
+    display: block;
+    width: 40vw;
+    border-radius: 20px;
+    height: 90vh;
+    top: 50px;
+    right: 50px;
+    background-color: #40ba7b;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
   }
-  body .header .menu-btn {
-    visibility: visible;
+  body .header .nav-items.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+    border-bottom: 1px solid black;
+  }
+  body .header .nav-items.responsive .dropdown {
+    float: none;
+  }
+  body .header .nav-items.responsive .dropdown-content {
+    position: relative;
+    margin-left: 20px;
+  }
+  body .header .nav-items.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
+
+@media screen and (max-width: 716px) {
+  body .header .nav-items.responsive {
+    display: block;
+    width: 80vw;
+    border-radius: 20px;
+    height: 90vh;
+    top: 50px;
+    right: 50px;
+    background-color: #40ba7b;
+    -webkit-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
   }
 }
 
