--- a/style/main.scss
+++ b/style/main.scss
@@ -94,142 +94,164 @@ body {
     -o-background-size: cover;
     background-size: cover;
 
-    nav {
-      padding-top: 25px;
-      display: flex;
-      width: 97%;
-      margin: auto;
-      border-bottom: 1px solid #ffffff;
+    /* Navbar container */
+    .nav-items {
+      overflow: hidden;
+      margin-left: auto;
+      margin-top: 40px;
+      margin-right: 20px;
 
-      img {
-        margin-left: 15px;
-        margin-bottom: 20px;
+      /* Links inside the navbar */
+      a {
+        float: left;
+        font-size: 16px;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
       }
 
-      ul {
-        margin-left: auto;
-        padding-right: 10px;
-        padding-left: 0;
-        list-style-type: none;
-        align-items: center;
-        display: flex;
+      /* The dropdown container */
+      .dropdown {
+        float: left;
+        overflow: hidden;
 
-        li {
-          cursor: pointer;
-          color: #ffffff;
-          font-size: 1.05em;
-          font-weight: 600;
-          padding-left: 30px;
+        button {
+          background: transparent;
+          box-shadow: none;
+          border: none;
         }
 
-        .drop:hover .dropdown-content {
-          visibility: visible;
-          opacity: 1;
-          display: block;
+        button:hover {
+          border-bottom: 3px solid $accent-color;
+          padding-bottom: 15px;
         }
+        /* Dropdown button */
+        // .dropbtn {
+        //   font-size: 16px;
+        //   border: none;
+        //   outline: none;
+        //   color: white;
+        //   padding: 14px 16px;
+        //   background-color: inherit;
+        //   font-family: inherit; /* Important for vertical align on mobile phones */
+        //   margin: 0; /* Important for vertical align on mobile phones */
+
+        //   a {
+        //     position: static;
+        //   }
+        // }
       }
 
+      /* Show the dropdown menu on hover */
+      .dropdown:hover .dropdown-content {
+        display: block;
+      }
+
+      /* Dropdown content (hidden by default) */
       .dropdown-content {
-        visibility: hidden;
+        display: none;
         position: absolute;
-        background: #016937;
-        flex-direction: column;
-        align-items: flex-start;
-        margin-top: 42px;
+        margin-top: 2px;
+        background-color: green;
+        min-width: 160px;
+        box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
         z-index: 1;
 
-        li {
-          padding: 10px 100px 10px 20px;
-
-          a {
-            text-decoration: none;
-            color: #ffffff;
-          }
+        a {
+          float: none;
+          color: black;
+          padding: 12px 16px;
+          text-decoration: none;
+          display: block;
+          text-align: left;
         }
+
+        a:hover {
+          background-color: $accent-color;
+        }
+      }
+      .dropdown-content a:hover {
+        background-color: #ddd;
       }
     }
 
-    .menu-btn {
-      visibility: hidden;
-      position: absolute;
-      top: 30px;
-      right: 10px;
+    nav {
       display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 40px;
-      height: 30px;
-      transition: all 0.5s ease-in-out;
-
-      &_burger {
-        width: 35px;
-        height: 4px;
-        background: white;
-        border-radius: 5px;
-        box-shadow: 0 2px 5px rgba(64, 186, 123, 0);
-        transition: all 0.5s ease-in-out;
+      border-bottom: 1px solid white;
+      .logo {
+        margin: 15px 0px 5px 10px;
+      }
+      .logo.show {
+        display: none;
       }
 
-      &_burger::before,
-      &_burger::after {
-        content: "";
-        position: absolute;
-        width: 35px;
-        height: 4px;
-        background: white;
-        border-radius: 5px;
-        box-shadow: 0 2px 5px rgba(64, 186, 123, 0);
-        transition: all 0.5s ease-in-out;
-      }
-
-      &_burger::before {
-        transform: translateY(-16px);
-      }
-
-      &_burger::after {
-        transform: translateY(16px);
+      .icon {
+        display: none;
       }
     }
 
-    .menu-btn.open .menu-btn_burger {
-      transform: translateX(-50px);
-      background: transparent;
-      box-shadow: none;
+    .nav-items.responsive {
+      display: none;
+      transition: all 5s ease-in-out;
     }
 
-    .menu-btn.open .menu-btn_burger::before {
-      transform: rotate(45deg) translate(35px, -35px);
-    }
-
-    .menu-btn.open .menu-btn_burger::after {
-      transform: rotate(-45deg) translate(35px, 35px);
-    }
-  }
-
-  @media screen and (max-width: 1172px) {
-    .header {
+    @media screen and (max-width: 1172px) {
       nav {
-        ul {
-          border-bottom: none;
-          flex-direction: column;
-          position: absolute;
-          top: 0;
-          right: 0;
-          left: 0;
-          height: 100vh;
-          transform: translateX(100vw);
-          background-color: #016937;
+        border: none;
 
-          img {
-            display: none;
-          }
+        .icon {
+          display: block;
+          position: absolute;
+          top: 10px;
+          right: 10px;
         }
       }
-      .menu-items.open {
-        transform: translateX(0);
+      .nav-items {
+        display: none;
       }
-      .menu-btn {
-        visibility: visible;
+
+      .nav-items.responsive {
+        display: block;
+        width: 40vw;
+        border-radius: 20px;
+        height: 90vh;
+        top: 50px;
+        right: 50px;
+        background-color: $accent-color;
+        transition: all 1s ease-in-out;
+      }
+
+      .nav-items.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+        border-bottom: 1px solid black;
+      }
+      .nav-items.responsive .dropdown {
+        float: none;
+      }
+      .nav-items.responsive .dropdown-content {
+        position: relative;
+        margin-left: 20px;
+      }
+      .nav-items.responsive .dropdown .dropbtn {
+        display: block;
+        width: 100%;
+        text-align: left;
+      }
+    }
+
+    @media screen and (max-width: 716px) {
+      .nav-items.responsive {
+        display: block;
+        width: 80vw;
+        border-radius: 20px;
+        height: 90vh;
+        top: 50px;
+        right: 50px;
+        background-color: $accent-color;
+        transition: all 1s ease-in-out;
       }
     }
   }
