--- a/style/main.scss
+++ b/style/main.scss
@@ -84,6 +84,20 @@ body {
     .md_heading {
       width: 98%;
     }
+
+    .big_btn {
+      font-weight: 600;
+      padding: 7px;
+      border-radius: 7px;
+      margin-right: 20px;
+      border: none;
+      background-color: $accent-color;
+      color: white;
+    }
+
+    .btn_work {
+      padding: 15px;
+    }
   }
 
   .header {
@@ -205,6 +219,11 @@ body {
           position: absolute;
           top: 10px;
           right: 10px;
+          cursor: pointer;
+        }
+
+        .iconify-inline.hamburger {
+          background: transparent;
         }
       }
       .nav-items {
