--- a/style/main.scss
+++ b/style/main.scss
@@ -306,6 +306,14 @@ body {
     }
   }
 
+  @media (max-width: 768px) {
+    .landing_page {
+      p {
+        width: 90%;
+      }
+    }
+  }
+
   .economy {
     background: url(/images/landingpagebg.png) no-repeat top right;
     width: 80%;
@@ -763,7 +771,7 @@ body {
     }
 
     .heading {
-      font-size: 3em;
+      font-size: 2em;
     }
   }
 }
