--- a/style/main.css
+++ b/style/main.css
@@ -851,7 +851,7 @@ nav .content .links {
   }
 }
 
-@media screen and (max-width: 1120px) {
+@media screen and (max-width: 1256px) {
   .Nav-wrapper {
     border: none;
   }
@@ -951,14 +951,11 @@ nav .content .links {
   margin-bottom: 50px;
 }
 
-.landing_page .contact.heading {
-  width: 100%;
-  text-align: center;
-  margin-top: 90px;
-  margin-bottom: 50px;
+.contact {
+  padding: 40px 30px;
 }
 
-.landing_page .grid {
+.contact .grid {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr 1fr;
@@ -966,42 +963,43 @@ nav .content .links {
   grid-gap: 20px;
 }
 
-.landing_page .grid .form {
-  width: 80%;
+.contact .grid .form {
+  color: white;
+  width: 60%;
   margin: auto;
   background: #40ba7b;
   border-radius: 20px;
   padding: 20px 0 20px 20px;
 }
 
-.landing_page .grid .form .md_btn {
+.contact .grid .form .md_btn {
   width: 90%;
   margin: auto;
 }
 
-.landing_page .grid .form label,
-.landing_page .grid .form input {
+.contact .grid .form label,
+.contact .grid .form input {
   display: block;
 }
 
-.landing_page .grid .form label {
+.contact .grid .form label {
   padding-bottom: 4px;
 }
 
-.landing_page .grid .form input {
+.contact .grid .form input {
   margin-bottom: 20px;
   padding: 5px;
   border-radius: 5px;
   border: none;
 }
 
-.landing_page .grid .form textarea {
+.contact .grid .form textarea {
   border-radius: 5px;
   padding: 5px;
   font-family: "Roboto", sans-serif;
 }
 
-.landing_page .grid .form button {
+.contact .grid .form button {
   font-family: "Roboto", sans-serif;
   padding: 10px;
   font-size: 0.97em;
@@ -1012,21 +1010,38 @@ nav .content .links {
   color: #40ba7b;
 }
 
-@media screen and (max-width: 1111px) {
-  .grid {
-    grid-column-gap: 30px;
-  }
-  .grid .form {
-    width: 100%;
+@media screen and (max-width: 1200px) {
+  .contact .grid .form {
+    width: 70%;
   }
 }
 
-@media screen and (max-width: 989px) {
-  .landing_page .grid {
-    display: block;
+@media screen and (max-width: 969px) {
+  .contact .grid {
+    grid-column-gap: 30px;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    width: 90%;
+    margin: auto;
   }
-  .landing_page .grid .form {
-    display: none;
+  .contact .grid .form {
+    margin: 10px 0px;
+    width: 50%;
+  }
+}
+
+@media screen and (max-width: 758px) {
+  .contact .grid .form {
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: 593px) {
+  .contact {
+    padding: 40px 10px;
+  }
+  .contact .grid .form {
+    width: 100%;
   }
 }
 
@@ -1053,15 +1068,18 @@ nav .content .links {
 }
 
 .contact_icons .icon_item {
-  font-size: 1.4em;
-  color: white;
+  font-size: 1em;
   padding-left: 10px;
   padding-top: 5px;
 }
 
 .contact_icons .icon_item a {
   text-decoration: none;
-  color: white;
+  color: black;
+}
+
+.contact_icons .icon_item a:hover {
+  color: #40ba7b;
 }
 
 .contact_icons .social_icons {
@@ -1715,7 +1733,7 @@ body footer {
 body footer .contact_info {
   background: #121212;
   font-size: 0.8em;
-  padding: 50px;
+  padding: 50px 50px 0px 50px;
   display: -ms-grid;
   display: grid;
   grid-gap: 50px;
@@ -1738,6 +1756,11 @@ body footer .contact_info .column div {
   margin-bottom: 10px;
 }
 
+body footer .contact_info .column a {
+  color: #858585;
+  text-decoration: none;
+}
+
 body footer .privacy_policy {
   background-color: #000;
   display: -webkit-box;
@@ -1750,14 +1773,22 @@ body footer .privacy_policy {
   font-size: 0.9em;
 }
 
+body footer .social_icons {
+  margin-top: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
 @media screen and (max-width: 718px) {
   body .footer .privacy_policy {
     display: -ms-grid;
     display: grid;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
 
