--- a/style/main.scss
+++ b/style/main.scss
@@ -723,7 +723,7 @@ body {
     .contact_info {
       background: #121212;
       font-size: 0.8em;
-      padding: 50px;
+      padding: 50px 50px 0px 50px;
       display: grid;
       grid-gap: 50px;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -743,6 +743,11 @@ body {
         div {
           margin-bottom: 10px;
         }
+
+        a {
+          color: #858585;
+          text-decoration: none;
+        }
       }
     }
 
@@ -753,13 +758,19 @@ body {
       padding: 25px;
       font-size: 0.9em;
     }
+
+    .social_icons {
+      margin-top: 100px;
+      display: flex;
+      justify-content: flex-end;
+    }
   }
 
   @media screen and (max-width: 718px) {
     .footer {
       .privacy_policy {
         display: grid;
-        flex-direction: column;
+        grid-template-columns: 1fr;
       }
     }
   }
