--- a/style/main.css
+++ b/style/main.css
@@ -1058,6 +1058,7 @@ nav .content .links {
 
 .contact_icons {
   margin-top: 30px;
+  padding-left: 20px;
 }
 
 .contact_icons_item {
@@ -1093,6 +1094,44 @@ nav .content .links {
   margin-right: 10px;
 }
 
+.media_events {
+  background: url(/images/landingpagebg.png) top center;
+  background-repeat: repeat-x;
+}
+
+.media_events .grid {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 3fr 1.5fr;
+      grid-template-columns: 3fr 1.5fr;
+  grid-gap: 20px;
+  width: 95%;
+  margin: auto;
+  padding: 40px 30px;
+}
+
+.media_events .grid_item {
+  border-radius: 20px;
+  padding: 35px 40px;
+  background: #016937;
+  color: white;
+}
+
+.media_events .grid_item ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+@media screen and (max-width: 1100px) {
+  .media_events .grid {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .media_events .grid .grid_item.suggested {
+    display: none;
+  }
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1102,6 +1141,10 @@ nav .content .links {
 body {
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.3px;
+}
+
+body a button {
+  cursor: pointer;
 }
 
 body .big_btn {
@@ -1137,6 +1180,11 @@ body .iconify {
   background-color: white;
   border-radius: 25px;
   margin-right: 5px;
+}
+
+body .iconify.social {
+  background: transparent;
+  border-radius: 0;
 }
 
 body .btn_work {
@@ -1781,6 +1829,10 @@ body footer .social_icons {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+}
+
+body footer .social_icons .item {
+  margin-right: 10px;
 }
 
 @media screen and (max-width: 718px) {
