--- a/style/main.css
+++ b/style/main.css
@@ -240,6 +240,10 @@
   color: #40ba7b;
 }
 
+.sm_heading.name {
+  font-size: 1.2em;
+}
+
 @media (max-width: 1200px) {
   .about_member .membership {
     width: 90%;
@@ -257,6 +261,17 @@
   .about_member .membership_text button {
     margin-left: 0px;
   }
+}
+
+.economy_grid .arrow li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.economy_grid .arrow li .text {
+  padding-top: 12px;
+  padding-left: 6px;
 }
 
 .team {
@@ -341,6 +356,16 @@
 .board .number_cards .thin {
   color: #40ba7b;
   font-weight: 400;
+}
+
+.latest_news.hover img {
+  filter: grayscale(100%);
+  -webkit-filter: grayscale(100%);
+}
+
+.latest_news.hover .card:hover img {
+  filter: none;
+  -webkit-filter: grayscale(0);
 }
 
 .other {
@@ -1058,7 +1083,7 @@ nav .content .links {
 
 .contact_icons {
   margin-top: 30px;
-  padding-left: 20px;
+  padding-left: 70px;
 }
 
 .contact_icons_item {
@@ -1199,8 +1224,12 @@ body .iconify {
   margin-right: 5px;
 }
 
-body .iconify.social {
-  background: transparent;
+body .iconify-inline.social {
+  background: #40ba7b;
+  border-radius: 50%;
+}
+
+body .iconify-inline.link {
   border-radius: 0;
 }
 
@@ -1840,6 +1869,7 @@ body footer .privacy_policy {
 
 body footer .social_icons {
   margin-top: 100px;
+  margin-right: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1850,6 +1880,16 @@ body footer .social_icons {
 
 body footer .social_icons .item {
   margin-right: 10px;
+  border: 1px solid #858585;
+  border-radius: 50%;
+  padding: 2px 3px 2px 3px;
+}
+
+body footer .social_icons .item img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 
 @media screen and (max-width: 718px) {
