--- a/style/main.scss
+++ b/style/main.scss
@@ -60,8 +60,12 @@ body {
     margin-right: 5px;
   }
 
-  .iconify.social {
-    background: transparent;
+  .iconify-inline.social {
+    background: $accent-color;
+    border-radius: 50%;
+  }
+
+  .iconify-inline.link {
     border-radius: 0;
   }
 
@@ -774,11 +778,23 @@ body {
 
     .social_icons {
       margin-top: 100px;
+      margin-right: 50px;
       display: flex;
       justify-content: flex-end;
 
       .item {
         margin-right: 10px;
+        border: 1px solid #858585;
+        border-radius: 50%;
+        padding: 2px 3px 2px 3px;
+      }
+
+      .item {
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: contain;
+        }
       }
     }
   }
