--- a/style/_media.scss
+++ b/style/_media.scss
@@ -23,6 +23,27 @@
   }
 }
 
+.news_article {
+  width: 80%;
+  margin: 50px auto 0px auto;
+  border-radius: 50px;
+  padding: 30px;
+  background: #eeeaea;
+  box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+
+  .article_img {
+    height: 300px;
+    width: 300px;
+    margin-bottom: 30px;
+
+    img {
+      height: 100%;
+      width: 100%;
+      object-fit: contain;
+    }
+  }
+}
+
 @media screen and (max-width: 1100px) {
   .media_events {
     .grid {
