--- a/style/main.css
+++ b/style/main.css
@@ -1147,6 +1147,29 @@ nav .content .links {
   padding-left: 0;
 }
 
+.news_article {
+  width: 80%;
+  margin: 50px auto 0px auto;
+  border-radius: 50px;
+  padding: 30px;
+  background: #eeeaea;
+  -webkit-box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+          box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
+}
+
+.news_article .article_img {
+  height: 300px;
+  width: 300px;
+  margin-bottom: 30px;
+}
+
+.news_article .article_img img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
 @media screen and (max-width: 1100px) {
   .media_events .grid {
     -ms-grid-columns: 1fr;
