--- a/style/_media.scss
+++ b/style/_media.scss
@@ -32,13 +32,13 @@
   box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 
   .article_img {
+    width: 100%;
     height: 300px;
-    width: 300px;
     margin-bottom: 30px;
 
     img {
-      height: 100%;
-      width: 100%;
+      max-height: 100%;
+      max-width: 100%;
       object-fit: contain;
     }
   }
