--- a/style/_nav.scss
+++ b/style/_nav.scss
@@ -1,6 +1,12 @@
 nav {
-  height: 80px;
   width: 100%;
+  padding-bottom: 10px;
+  border-bottom: 1px solid white;
+
+  img {
+    margin-top: 10px;
+    margin-left: 10px;
+  }
 
   ul {
     list-style: none;
@@ -22,25 +28,31 @@ nav {
     li {
       display: inline-block;
       line-height: 80px;
-      margin: 0px 10px;
+      margin: 15px 14px;
     }
   }
 
   #menu-icon {
     position: fixed;
     right: 20px;
-    top: 10px;
+    top: 2px;
     color: white;
     font-size: 30px;
     line-height: 80px;
     float: right;
-    margin-right: 40px;
     display: none;
   }
 }
 
 @media screen and (max-width: 1152px) {
   nav {
+    border: none;
+
+    img {
+      margin-top: 20px;
+      width: 120px;
+    }
+
     ul {
       position: fixed;
       top: 0;
