--- a/style/main.css
+++ b/style/main.css
@@ -675,8 +675,14 @@
 }
 
 nav {
-  height: 80px;
   width: 100%;
+  padding-bottom: 10px;
+  border-bottom: 1px solid white;
+}
+
+nav img {
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 nav ul {
@@ -701,22 +707,28 @@ nav ul a:hover {
 nav ul li {
   display: inline-block;
   line-height: 80px;
-  margin: 0px 10px;
+  margin: 15px 14px;
 }
 
 nav #menu-icon {
   position: fixed;
   right: 20px;
-  top: 10px;
+  top: 2px;
   color: white;
   font-size: 30px;
   line-height: 80px;
   float: right;
-  margin-right: 40px;
   display: none;
 }
 
 @media screen and (max-width: 1152px) {
+  nav {
+    border: none;
+  }
+  nav img {
+    margin-top: 20px;
+    width: 120px;
+  }
   nav ul {
     position: fixed;
     top: 0;
